@@ -141,6 +141,7 @@ S3method(makeRLearner,classif.quaDA)
 S3method(makeRLearner,classif.rFerns)
 S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.randomForestSRC)
+S3method(makeRLearner,classif.randomForestSRCSyn)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rknn)
 S3method(makeRLearner,classif.rotationForest)
@@ -201,6 +202,7 @@ S3method(makeRLearner,regr.penalized.ridge)
 S3method(makeRLearner,regr.plsr)
 S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.randomForestSRC)
+S3method(makeRLearner,regr.randomForestSRCSyn)
 S3method(makeRLearner,regr.rknn)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
@@ -301,6 +303,7 @@ S3method(predictLearner,classif.quaDA)
 S3method(predictLearner,classif.rFerns)
 S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.randomForestSRC)
+S3method(predictLearner,classif.randomForestSRCSyn)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rknn)
 S3method(predictLearner,classif.rotationForest)
@@ -360,6 +363,7 @@ S3method(predictLearner,regr.penalized.ridge)
 S3method(predictLearner,regr.plsr)
 S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.randomForestSRC)
+S3method(predictLearner,regr.randomForestSRCSyn)
 S3method(predictLearner,regr.rknn)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
@@ -509,6 +513,7 @@ S3method(trainLearner,classif.quaDA)
 S3method(trainLearner,classif.rFerns)
 S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.randomForestSRC)
+S3method(trainLearner,classif.randomForestSRCSyn)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rknn)
 S3method(trainLearner,classif.rotationForest)
@@ -568,6 +573,7 @@ S3method(trainLearner,regr.penalized.ridge)
 S3method(trainLearner,regr.plsr)
 S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.randomForestSRC)
+S3method(trainLearner,regr.randomForestSRCSyn)
 S3method(trainLearner,regr.rknn)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
